--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="static/images/avatar.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="static/images/avatar.png" alt="" /></span>
 							<h1 id="title">Michael Brand</h1>
 							<p>Software Engineer</p>
 						</div>
@@ -95,9 +95,9 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="static/images/pic04.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="static/images/prog_portfolio_website.jpg" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>Personal Portfolio Website</h3>
 										</header>
 									</article>
 									<article class="item">
@@ -134,14 +134,13 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="static/images/pic08.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="static/images/dance.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>Hi, I'm Michael. I have had the privilege of playing with computers since the age of 3. My curiosity has lead me on a learning journey
+								through a rich range of subjects in University from including philosophy, psychology, economics, mathematics, economics, statistics, computer science
+								and ultimately completing a post graduate BSc in information systems. I joined the corporate world developing a variety of custom business solutions,
+								and later for the banking sector.
+							</p>
 
 						</div>
 					</section>
@@ -154,12 +153,9 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p>Feel free to contact me below.</p>
 
-							<form method="post" action="#">
+							<form method="post" action="{{ url_for('home_page') }}#contact">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
@@ -167,7 +163,7 @@
 										<textarea name="message" placeholder="Message"></textarea>
 									</div>
 									<div class="col-12">
-										<input type="submit" value="Send Message" />
+										<input type="submit" value="{{ message }}" />
 									</div>
 								</div>
 							</form>
